--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
+    "start": "ng serve --port 4200 --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,12 +11,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.10",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "^6.1.10",
     "@angular/compiler": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
     "@angular/http": "^6.1.10",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "^6.1.10",
@@ -24,17 +20,24 @@
     "@angular/router": "^6.1.10",
     "@mdi/font": "^3.8.95",
     "@ng-bootstrap/ng-bootstrap": "^4.2.1",
+    "ajv": "^6.9.1",
     "angular-material": "^1.1.19",
     "core-js": "^2.6.9",
+    "mat-select-autocomplete": "^1.2.4",
     "ngx-dropdown": "0.0.22",
     "ngx-json-viewer": "^2.4.0",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.3.0",
+    "tslib": "^1.10.0",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.13.4",
+    "@angular/animations": "^6.1.10",
     "@angular/cli": "~6.1.5",
+    "@angular/common": "^6.1.10",
     "@angular/compiler-cli": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/forms": "^6.1.10",
     "@angular/language-service": "^6.1.10",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
@@ -42,7 +45,7 @@
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "^4.2.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "~1.1.1",
@@ -51,5 +54,9 @@
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "~2.7.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 6.1.5.",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
